# fastwilcox

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
fastwilcox/: __init__.py  grouping.py  matrix.py  models.py  ranking.py  stats.py  wilcox.py
tests/: __init__.py  conftest.py  test_stats.py  test_wilcox_csc.py  test_wilcox_csr.py  test_wilcox_dense.py
tests/data/: small.test.csc.h5ad  small.test.csr.h5ad  small.test.dense.h5ad  small.test.wilcox.dense.txt  wilcox_results_dense.txt
